# cmps279-quiz-2

./: .env.example  Makefile  README.md  assignment.txt  details.txt  fly.toml  main.py  pyproject.toml
backend/: Dockerfile  fly.toml  main.py  pyproject.toml  requirements.txt
backend/models/: book.py
backend/routers/: book.py  book_helpers.py
backend/services/: config.py  upload.py
frontend/app/: build.gradle.kts
frontend/app/src/androidTest/java/lb/edu/aub/cmps279Spring26/hmr23/: ExampleInstrumentedTest.kt
frontend/app/src/main/: AndroidManifest.xml
frontend/app/src/main/java/lb/edu/aub/cmps279Spring26/hmr23/: MainActivity.java  MainActivity.kt
frontend/app/src/main/java/lb/edu/aub/cmps279Spring26/hmr23/adapters/: BookAdapter.java
frontend/app/src/main/java/lb/edu/aub/cmps279Spring26/hmr23/models/: Book.java  BookCreate.java  BookListResponse.java  BookUpdate.java
frontend/app/src/main/res/drawable/: bg_image_preview.xml  bg_spinner.xml  ic_arrow_back.xml
frontend/app/src/main/res/layout/: fragment_add_book.xml  fragment_book_detail.xml  fragment_book_list.xml  fragment_edit_book.xml  item_book.xml
frontend/app/src/main/res/navigation/: nav_graph.xml
frontend/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
frontend/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
frontend/app/src/test/java/lb/edu/aub/cmps279Spring26/hmr23/: ExampleUnitTest.kt
frontend/gradle/wrapper/: gradle-wrapper.properties
models/: book.py
routers/: book.py
services/: config.py  search.py  setup.py  upload.py
(+14 files in other folders)
