[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.89",
    "dotenv>=0.9.9",
    "fastapi>=0.135.3",
    "pymongo>=4.16.0",
    "sentence-transformers>=5.4.1",
    "uvicorn>=0.44.0",
]
